Add anagram function

--- a/index.html
+++ b/index.html
@@ -3,7 +3,21 @@
   <head lang="ja">
     <meta charset="utf-8">
     <title>anagram</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
+    <div class="container">
+      <div id="title">
+        <p>ANAGRAM</p>
+      </div>
+      <div id="input-area">
+        <input type="text" id="name" placeholder="Type here." autocomplete="off">
+        <div id="btn">Generate</div>
+      </div>
+      <div id="triangle" class="hidden"></div>
+      <p id="output" class="hidden"></p>
+    </div>
+    
+    <script src="js/main.js"></script>
   </body>
 </html>
