Add reset function

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       </div>
       <div id="triangle" class="hidden"></div>
       <p id="output" class="hidden"></p>
+      <div id="reset" class="hidden">Reset</div>
     </div>
     
     <script src="js/main.js"></script>
